full removal of 'about,' javascript bug squashing

--- a/main.css
+++ b/main.css
@@ -24,6 +24,9 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block; }
 
+html {
+  scroll-behavior: smooth; }
+
 body {
   line-height: 1; }
 
@@ -75,6 +78,7 @@ h5 {
   font-size: 1em; }
 
 .card {
+  border: solid black 2px;
   position: relative;
   background: #86baa1;
   height: 100%;
@@ -87,14 +91,24 @@ h5 {
   .card img {
     width: 100%;
     position: relative; }
-  .card .card__title {
-    width: 100%;
-    position: absolute;
-    font-size: 1.5em;
-    font-weight: bold;
-    padding: .5em;
-    bottom: 0;
-    background: white; }
+  .card.card--has-title {
+    background: #fadf63; }
+    .card.card--has-title .card__content {
+      margin-bottom: 3em; }
+    .card.card--has-title .card__title {
+      width: 100%;
+      position: absolute;
+      font-size: 1.5em;
+      font-weight: bold;
+      padding: .5em;
+      bottom: 0;
+      background: #204787;
+      color: white; }
+
+.card--shadow-card {
+  -webkit-box-shadow: 1px 1px 11px 1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 1px 1px 11px 1px rgba(0, 0, 0, 0.75);
+  box-shadow: 1px 1px 11px 1px rgba(0, 0, 0, 0.75); }
 
 .button {
   background: grey;
@@ -125,6 +139,9 @@ h5 {
   .header.small {
     padding-top: 50px;
     padding-bottom: 50px; }
+
+.wrapper.wrapper--header {
+  padding-top: 50px; }
 
 .tabs {
   width: 100%;
@@ -217,7 +234,7 @@ ul.navbar {
   position: absolute;
   background: #204787;
   text-align: center;
-  z-index: 100;
+  z-index: 5;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.4); }
   ul.navbar.is-fixed {
     position: fixed;
@@ -225,7 +242,7 @@ ul.navbar {
   ul.navbar li {
     float: left;
     height: 100%;
-    width: 25%;
+    width: 33%;
     border-right: 2px solid #fadf63; }
     ul.navbar li:hover a {
       color: #fadf63; }
@@ -260,12 +277,38 @@ ul.navbar {
     background: white; }
     .grid.grid--body .grid-sizer,
     .grid.grid--body .grid-item {
-      width: 25%;
-      border: 1px solid white; }
+      width: 25%; }
       @media (max-width: 1000px) {
         .grid.grid--body .grid-sizer,
         .grid.grid--body .grid-item {
           width: 50%; } }
+
+.modal {
+  z-index: -3;
+  opacity: 0;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: opacity ease-in .3s; }
+  .modal .modal__content {
+    position: inline;
+    margin: auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    max-width: 60%;
+    max-height: 80%;
+    padding: 10px;
+    background: white; }
+  @media (max-width: 1000px) {
+    .modal .modal__content {
+      width: 75%; } }
+
+.modal:target {
+  z-index: 10;
+  opacity: 1; }
 
 .content {
   background: #eef0f2;
@@ -314,18 +357,31 @@ ul.navbar {
   overflow: hidden;
   width: 100%;
   padding: 20px; }
-  @media (min-width: 1000px) {
-    .layout-3wide > * {
-      float: left;
-      margin-top: 0em; }
-      .layout-3wide > *:nth-child(1) {
-        width: 31%; }
-      .layout-3wide > *:nth-child(2) {
-        width: 31%; }
-      .layout-3wide > *:nth-child(3) {
-        width: 31%; }
-    .layout-3wide > * + * {
-      margin-left: 3.5%; } }
+  .layout-3wide > * {
+    float: left;
+    margin-top: 0em; }
+    .layout-3wide > *:nth-child(1) {
+      width: 31%; }
+    .layout-3wide > *:nth-child(2) {
+      width: 31%; }
+    .layout-3wide > *:nth-child(3) {
+      width: 31%; }
+  .layout-3wide > * + * {
+    margin-left: 3.5%; }
+
+.layout-2wide {
+  overflow: hidden;
+  width: 100%;
+  padding: 20px; }
+  .layout-2wide > * {
+    float: left;
+    margin-top: 0em; }
+    .layout-2wide > *:nth-child(1) {
+      width: 49%; }
+    .layout-2wide > *:nth-child(2) {
+      width: 49%; }
+  .layout-2wide > * + * {
+    margin-left: 2%; }
 
 .layout-sidebyside {
   overflow: hidden;
